fix: remove invisible text cloud from mobile mode

--- a/src/scss/modules/about.scss
+++ b/src/scss/modules/about.scss
@@ -39,7 +39,7 @@ line-height: 32px;
   bottom: 180px;
   left: 180px;
   background: url("../assets/img/speech_cloud.svg") no-repeat 30px 70px;
-  display:block;
+  display:none;
   opacity:0;
   
 }
